--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,8 @@
     <app-transactions-list></app-transactions-list>
   </div>
 
+  <!-- TODO: Remove the button when modal is implemented -->
   <button class="btn btn-primary">Show modal</button>
 </main>
 
-<div class="py-2 bg-white" style="position: fixed; bottom: 0;">
-  <app-footer></app-footer>
-</div>
+<app-footer></app-footer>
