user-story-5: implement transaction items filtering

--- a/src/app/transactions/components/transactions-list/transactions-list.component.html
+++ b/src/app/transactions/components/transactions-list/transactions-list.component.html
@@ -1,13 +1,16 @@
+
 <div class="card">
   <h5 class="card-header text-white">
-    <i class="lni lni-list"></i>Transactions <span class="font-weight-bold">List</span></h5>
+    <i class="lni lni-list"></i>Transactions <span class="font-weight-bold">List</span>
+    <button class="btn btn-danger" (click)="addDummyTransaction()">Add Dummy Transaction</button>
+  </h5>
   <div class="card-body d-flex flex-column">
-    <app-filter></app-filter>
+    <app-filter (inputChange)="onInputChange($event)"></app-filter>
     <div class="transactions-list flex-grow-1">
-      <ng-container *ngIf="transactions$ | async as transactions">
+      <ng-container *ngIf="transactionsDataList$ | async as transactionsDataList">
         <app-custom-transaction-item
-          *ngFor="let transaction of transactions"
-          [transactionData]="transaction"
+          *ngFor="let transactionData of transactionsDataList"
+          [transactionData]="transactionData"
         ></app-custom-transaction-item>
       </ng-container>
     </div>
