--- a/src/app/transactions/components/add-transaction-form/add-transaction-form.component.html
+++ b/src/app/transactions/components/add-transaction-form/add-transaction-form.component.html
@@ -1,10 +1,84 @@
-<div class="card mr-4" style="width: 350px; height: 400px; border-radius: 1rem;">
+<div class="card mr-4" style="width: 350px; min-height: 400px; border-radius: 1rem;">
   <h5 class="card-header text-white">
     <i class="lni lni-credit-cards"></i><span class="font-weight-bold">Make</span> Transfer
+    <button class="btn btn-warning" (click)="subtractFromBalance()">Subtract $400</button>
   </h5>
   <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <form #form="ngForm">
+      <div class="form-group">
+        <label for="own-account-name">From Account</label>
+        <div class="input-group mb-3">
+          <input
+            id="own-account-name"
+            type="text"
+            class="form-control"
+            [value]="ownAccountDetails"
+            name="own-account-name"
+            [disabled]="true"
+            aria-describedby="basic-addon1"
+          >
+          <div class="invalid-feedback">
+            Please provide a valid city.
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="target-account-name">To Account</label>
+          <div class="input-group mb-3">
+            <input
+              id="target-account-name"
+              type="text"
+              class="form-control"
+              [class.is-invalid]="targetAccountName.errors && (targetAccountName.dirty || targetAccountName.touched)"
+              placeholder="type an account name"
+              [(ngModel)]="formModel.targetAccountName"
+              name="targetAccountName"
+              #targetAccountName="ngModel"
+              required
+              aria-label="type an account name"
+              aria-describedby="basic-addon2"
+            >
+            <div
+              *ngIf="targetAccountName.errors && (targetAccountName.dirty || targetAccountName.touched)"
+              class="invalid-feedback">
+              <span *ngIf="targetAccountName.errors.required">This field is required</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="amount">Amount</label>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon3"><i class="bi bi-currency-euro"></i></span>
+          </div>
+          <input
+            id="amount"
+            type="text"
+            class="form-control"
+            [class.is-invalid]="amount.errors && (amount.dirty || amount.touched)"
+            placeholder="specify the amount"
+            [(ngModel)]="formModel.amount"
+            name="amount"
+            #amount="ngModel"
+            required
+            aria-label="specify the amount"
+            aria-describedby="basic-addon3"
+          >
+          <div
+            *ngIf="amount.errors && (amount.dirty || amount.touched)"
+            class="invalid-feedback">
+            <span *ngIf="amount.errors.required">There is not enough balance</span>
+          </div>
+        </div>
+      </div>
+    </form>
+
+    <div class="text-right">
+      <app-submit-button (submitForm)="onSubmitForm()"></app-submit-button>
+    </div>
   </div>
 </div>
+
+{{form.value | json}}
+{{form.errors | json}}
+{{targetAccountName.touched | json}}
