--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,9 @@
 @import "https://cdn.lineicons.com/3.0/lineicons.css";
 
 @import "styles/main";
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
+
+html, body {
+  font-family: 'Nunito', sans-serif;
+}
