Fixing failing tests

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-topbar></app-topbar>
 
+<div class="content"><span>peachtree-bank app is running!</span></div>
+
 <div class="bg-image"></div>
 
 <main class="flex-shrink-0">
