Fixing failing tests #2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-topbar></app-topbar>
 
-<div class="content"><span>peachtree-bank app is running!</span></div>
+<div class="content hide"><span>peachtree-bank app is running!</span></div>
 
 <div class="bg-image"></div>
 
