Add test for main page and transaction form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-topbar></app-topbar>
 
-<div class="content hide"><span>peachtree-bank app is running!</span></div>
-
-<div class="bg-image"></div>
+<div class="bg-image">
+  <div class="content invisible"><span>peachtree-bank app is running!</span></div>
+</div>
 
 <main class="flex-shrink-0">
   <div class="container d-flex">
