--- a/src/app/transactions/components/add-transaction-form/add-transaction-form.component.html
+++ b/src/app/transactions/components/add-transaction-form/add-transaction-form.component.html
@@ -6,10 +6,10 @@
     <form [formGroup]="transactionForm">
       <!-- TODO: create form component to make it more DRY -->
       <div class="form-group">
-        <label for="own-account-name">From Account</label>
+        <label for="from-account">From Account</label>
         <div class="input-group mb-3">
           <input
-            id="own-account-name"
+            id="from-account"
             class="form-control"
             type="text"
             formControlName="ownAccountDetails"
@@ -17,22 +17,22 @@
           >
         </div>
         <div class="form-group">
-          <label for="target-account-name">To Account</label>
+          <label for="to-account">To Account</label>
           <div class="input-group mb-3">
             <input
-              id="target-account-name"
+              id="to-account"
               class="form-control"
               type="text"
-              [class.is-invalid]="targetAccountName.errors && (targetAccountName.dirty || targetAccountName.touched)"
+              [class.is-invalid]="targetAccountNameControl.errors && (targetAccountNameControl.dirty || targetAccountNameControl.touched)"
               placeholder="type an account name"
               formControlName="targetAccountName"
               aria-label="type an account name"
               aria-describedby="basic-addon2"
             >
             <div
-              *ngIf="targetAccountName.errors && (targetAccountName.dirty || targetAccountName.touched)"
+              *ngIf="targetAccountNameControl.errors && (targetAccountNameControl.dirty || targetAccountNameControl.touched)"
               class="invalid-feedback">
-              <span *ngIf="targetAccountName.errors.required">This field is required</span>
+              <span *ngIf="targetAccountNameControl.errors.required">This field is required</span>
             </div>
           </div>
         </div>
@@ -47,18 +47,18 @@
             id="amount"
             class="form-control"
             type="number"
-            [class.is-invalid]="amount.errors && (amount.dirty || amount.touched)"
+            [class.is-invalid]="amountControl.errors && (amountControl.dirty || amountControl.touched)"
             placeholder="specify the amount"
             formControlName="amount"
             aria-label="specify the amount"
             aria-describedby="basic-addon3"
           >
           <div
-            *ngIf="amount.errors && (amount.dirty || amount.touched)"
+            *ngIf="amountControl.errors && (amountControl.dirty || amountControl.touched)"
             class="invalid-feedback">
-            <span *ngIf="amount.errors.required">There is not enough balance</span>
-            <span *ngIf="amount.errors.min">The amount must be greater than 0</span>
-            <span *ngIf="amount.errors.overdraft">Account limit exceeded by {{amount.errors.overdraft.value}}</span>
+            <span *ngIf="amountControl.errors.required">There is not enough balance</span>
+            <span *ngIf="amountControl.errors.min">The amount must be greater than 0</span>
+            <span *ngIf="amountControl.errors.overdraft">Account limit exceeded by {{amountControl.errors.overdraft.value}}</span>
           </div>
         </div>
       </div>
