--- a/src/app/transactions/components/add-transaction-form/add-transaction-form.component.html
+++ b/src/app/transactions/components/add-transaction-form/add-transaction-form.component.html
@@ -4,7 +4,6 @@
   </h5>
   <div class="card-body">
     <form [formGroup]="transactionForm">
-      <!-- TODO: create form component to make it more DRY -->
       <div class="form-group">
         <label for="from-account">From Account</label>
         <div class="input-group mb-3">
@@ -16,6 +15,8 @@
             aria-describedby="basic-addon1"
           >
         </div>
+      </div>
+      <div>
         <div class="form-group">
           <label for="to-account">To Account</label>
           <div class="input-group mb-3">
@@ -23,16 +24,16 @@
               id="to-account"
               class="form-control"
               type="text"
-              [class.is-invalid]="targetAccountNameControl.errors && (targetAccountNameControl.dirty || targetAccountNameControl.touched)"
+              [class.is-invalid]="hasErrors(targetAccountNameControl)"
               placeholder="type an account name"
               formControlName="targetAccountName"
               aria-label="type an account name"
               aria-describedby="basic-addon2"
             >
             <div
-              *ngIf="targetAccountNameControl.errors && (targetAccountNameControl.dirty || targetAccountNameControl.touched)"
+              *ngIf="hasErrors(targetAccountNameControl)"
               class="invalid-feedback">
-              <span *ngIf="targetAccountNameControl.errors.required">This field is required</span>
+              <span *ngIf="targetAccountNameControl.errors?.required">This field is required</span>
             </div>
           </div>
         </div>
@@ -47,21 +48,45 @@
             id="amount"
             class="form-control"
             type="number"
-            [class.is-invalid]="amountControl.errors && (amountControl.dirty || amountControl.touched)"
+            [class.is-invalid]="hasErrors(amountControl)"
             placeholder="specify the amount"
             formControlName="amount"
             aria-label="specify the amount"
             aria-describedby="basic-addon3"
           >
           <div
-            *ngIf="amountControl.errors && (amountControl.dirty || amountControl.touched)"
+            *ngIf="hasErrors(amountControl)"
             class="invalid-feedback">
-            <span *ngIf="amountControl.errors.required">There is not enough balance</span>
-            <span *ngIf="amountControl.errors.min">The amount must be greater than 0</span>
-            <span *ngIf="amountControl.errors.overdraft">Account limit exceeded by {{amountControl.errors.overdraft.value}}</span>
+            <span *ngIf="amountControl.errors?.required">There is not enough balance</span>
+            <span *ngIf="amountControl.errors?.min">The amount must be greater than 0</span>
+            <span *ngIf="amountControl.errors?.overdraft">Account limit exceeded by {{amountControl.errors?.overdraft?.value}}</span>
           </div>
         </div>
       </div>
+
+      <!-- TODO: create form field component to make form more DRY -->
+      <!--      <app-form-field-->
+      <!--        id="from-account"-->
+      <!--        label="From Account"-->
+      <!--        formControlName="ownAccountDetails"-->
+      <!--        [control]="ownAccountDetailsControl"-->
+      <!--      ></app-form-field>-->
+
+      <!--      <app-form-field-->
+      <!--        id="to-account"-->
+      <!--        label="To Account"-->
+      <!--        placeholder="type an account name"-->
+      <!--        formControlName="targetAccountName"-->
+      <!--        [control]="targetAccountNameControl"-->
+      <!--      ></app-form-field>-->
+
+      <!--      <app-form-field-->
+      <!--        id="amount"-->
+      <!--        label="Amount"-->
+      <!--        placeholder="specify the amount"-->
+      <!--        formControlName="amount"-->
+      <!--        [control]="amountControl"-->
+      <!--      ></app-form-field>-->
     </form>
     <div class="text-right">
       <app-submit-button (submitForm)="onSubmitForm()"></app-submit-button>
