--- a/src/app/transactions/components/review-transfer-modal/review-transfer-modal.component.html
+++ b/src/app/transactions/components/review-transfer-modal/review-transfer-modal.component.html
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<div class="modal-header" data-test-hook="reviewTransferModal">
   <h4 class="modal-title pull-left"><span class="font-weight-bold">Review</span> Transfer</h4>
   <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
     <span aria-hidden="true" class="visually-hidden">&times;</span>
@@ -12,7 +12,6 @@
   <p><i class="bi bi-currency-euro"></i>{{amount}}</p>
 </div>
 <div class="modal-footer">
-<!--  <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">{{closeBtnName}}</button>-->
   <button type="button" class="btn btn-default" (click)="decline()">Close</button>
   <button type="button" class="btn btn-primary" (click)="confirm()">Send Transfer</button>
 </div>
